# imajin

./: .gitignore  .python-version  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  build.yml
environment/: conda.yaml
leb/imajin/models/detectors/: cmos_camera.py
src/leb/imajin/: __init__.py  _constants.py  _models.py  _response.py  _validation.py
src/leb/imajin/detectors/: __init__.py  _detectors.py
src/leb/imajin/experiment/: experiment.py
src/leb/imajin/experiments/: _experiment.py  experiment.py
src/leb/imajin/instrument/: __init__.py  instrument.py
src/leb/imajin/instruments/: __init__.py  _source.py  detectors.py  instruments.py  sources.py
src/leb/imajin/instruments/optics/: __init__.py  _optical_system.py  _optical_systems.py  _psfs.py  psfs.py
src/leb/imajin/optics/: __init__.py  _optics.py  _psfs.py
src/leb/imajin/samples/: __init__.py  _sample.py  _samples.py  _state_machine.py  sample.py  samples.py
src/leb/imajin/samples/factories/: __init__.py  _sample_factories.py
src/leb/imajin/simulators/: __init__.py  _simulators.py
src/leb/imajin/sources/: __init__.py  _sources.py
tests/: conftest.py
tests/integration/: test_benchmark_simulator_0.py  test_benchmark_simulator_1.py  test_microscope.py  test_simulator.py  test_simulators.py
tests/unit/leb/imajin/detectors/: test_detectors.py
tests/unit/leb/imajin/instrument/: test_cmos_camera.py  test_detectors.py  test_sources.py
tests/unit/leb/imajin/instruments/: test_optical_systems.py  test_optics.py
tests/unit/leb/imajin/models/: test_detectors.py
tests/unit/leb/imajin/optics/: test_optics.py
tests/unit/leb/imajin/samples/: conftest.py  test_samples.py  test_state_machine.py
tests/unit/leb/imajin/simulators/: conftest.py  test_simulators.py
tests/unit/leb/imajin/sources/: test_sources.py
