[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "leb.imajin"
version = "0.0.0"
description = "Tools to simulate optics and microscopy experiments."
authors = ["Kyle M. Douglass <kyle.douglass@epfl.ch>"]
packages = [
    { include = "leb", from = "src" }
]

[tool.poetry.dependencies]
numpy = "*"
scipy = "*"
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = ">=5.0"
mypy = "*"
pytest = "^7.1"
tox = "^3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = 
    black
    isort
    mypy
    py39
    py310
isolated_build = True

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest

[testenv:format]
allowlist_externals = 
    black
    isort
skip_install = True
commands =
    black .
    isort .

[testenv:{black, isort, mypy}]
allowlist_externals =
    black
    isort
    mypy
skip_install = True
commands =
    black: black --check --diff .
    isort: isort --check --diff .
    mypy: mypy .
"""

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

plugins = "numpy.typing.mypy_plugin"
