[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "leb.imajin"
version = "0.0.0"
description = "Tools to simulate optics and microscopy experiments."
authors = ["Kyle M. Douglass <kyle.douglass@epfl.ch>"]
packages = [
    { include = "leb", from = "src" }
]

[tool.poetry.dependencies]
numba = "*"
numpy = "*"
scipy = ">=1.9"
python = ">=3.9,<3.12"

[tool.poetry.dev-dependencies]
black = "*"
isort = ">=5.0"
mypy = "*"
pylint = "*"
pytest = "^7.2"
pytest-benchmark = "*"
tox = "^4"
viztracer = "*"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    black
    isort
    mypy
    pylint
    py310
isolated_build = True

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --benchmark-disable

[testenv:benchmark]
allowlist_externals = pytest
commands =
    pytest --benchmark-only --benchmark-autosave --reset

[testenv:profile]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run python tests/integration/test_benchmark_simulator_0.py

[testenv:format]
allowlist_externals = 
    black
    isort
skip_install = True
commands =
    black .
    isort .

[testenv:{black, isort, mypy, pylint}]
allowlist_externals =
    black
    isort
    mypy
    pylint
skip_install = True
commands =
    black: black --check --diff .
    isort: isort --check --diff .
    mypy: mypy .
    pylint: pylint src
"""

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

plugins = "numpy.typing.mypy_plugin"

[tool.pylint]
max-line-length = 100

[tool.pylint."messages control"]
disable = "missing-docstring, too-few-public-methods, too-many-arguments, too-many-instance-attributes, too-many-locals"
good-names = ["x", "x0", "x_", "dx", "y", "y0", "y_", "dy", "z", "z0", "z_", "dt"]
ignored-classes = "Validation"
ignored-modules = "scipy.special"
